fix(InfoboxNeue): use box-shadow instead of border to avoid shifting

--- a/InfoboxNeue/styles.css
+++ b/InfoboxNeue/styles.css
@@ -9,10 +9,8 @@
 }
 
 .infobox.mw-collapsed {
-    border: 1px inset;
-    border-color: var( --border-color-base );
     background-color: transparent;
-    /* box-shadow: inset 0 0 0 1px var( --border-color-base ); */
+    box-shadow: inset 0 0 0 1px var( --border-color-base );
 }
 
 .infobox__image img {
